# macro-tracker

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml  registry.yaml  requirements.txt  run_tracker.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  daily-ingest.yml
.streamlit/: config.toml
scripts/: ingest.py
src/macro_tracker/: __init__.py  analytics.py  config.py  db.py  extract.py  github.py  ingestion.py  registry.py  schema.py  storage.py  tracker.py  transform.py
src/macro_tracker/api/: main.py
src/macro_tracker/connectors/: base.py  fred.py  placeholder.py  yfinance_conn.py
src/macro_tracker/dashboard/: app.py
tests/: test_api.py  test_connectors.py  test_registry.py  test_schema.py
